--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>My name is Evelyn. As nyleve9, I am hosted with GitHub Pages.</p>
+<p>My name is Evelyn Cheng. As nyleve9, I am hosted with GitHub Pages.</p>
 </body>
 </html>
